# Nearmon

./: .gitignore  package-lock.json
client/: .prettierrc  package-lock.json  package.json  tailwind.config.ts
client/src/api/: get_all.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/active/: page.tsx
client/src/app/all/: page.tsx
client/src/components/: ConnectWalletButton.tsx  Loading.tsx  PokemonCard.tsx  PokemonCardItem.tsx  PokemonContests.tsx  PokemonSelector.tsx
client/src/contexts/: WalletSelectorContext.tsx  contractInteraction.ts
client/src/sections/: Footer.tsx  Navbar.tsx  PokemonList.tsx
client/src/services/: near-wallet.js  pokemons.ts
contract/: Cargo.toml
contract/neardev/: dev-account  dev-account.env
contract/sandbox-rs/: Cargo.toml
contract/sandbox-rs/src/: tests.rs
contract/src/: lib.rs
