[package]
name = "sandbox"
version = "1.0.0"
publish = false
edition = "2021"

[dev-dependencies]
tokio = { version = "1.18.1", features = ["full"] }
near-workspaces = "0.9.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde = { version = "1.0", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "sandbox"
path = "src/tests.rs"

